# adversary_emulations

./: .markdownlint.json  package-lock.json  readme.md
.github/workflows/: deploy_infra.yml  destroy_infra.yml
Enterprise/mustang_panda/: README.md
Enterprise/mustang_panda/CTI_Emulation_Resources/: Mustang_Panda_Scenario_Overview.md  README.md
Enterprise/mustang_panda/Emulation_Plan/: Mustang_Panda_Alternative_Steps.md  Mustang_Panda_Cleanup_Guide.md  Mustang_Panda_Scenario.md  Protections_Test_4_Scenario.md  Protections_Test_5_Scenario.md  README.md
Enterprise/mustang_panda/Resources/: README.md
Enterprise/mustang_panda/Resources/Images/: README.md
Enterprise/mustang_panda/Resources/assets/: README.md
Enterprise/mustang_panda/Resources/controlServer/: .gitignore  certs.txt  evalsC2client.py  main.go
Enterprise/mustang_panda/Resources/controlServer/config/: config_test.go  mustang_panda.yml  protections.yml  restAPI_config.yml  sample_handler_config.yml
Enterprise/mustang_panda/Resources/controlServer/display/: README.md  display.go
Enterprise/mustang_panda/Resources/controlServer/files/: README.md
Enterprise/mustang_panda/Resources/controlServer/handlers/: HandlerCreationGuide.md  README.md  handlers.go  handlers_test.go
Enterprise/mustang_panda/Resources/controlServer/logger/: README.md
Enterprise/mustang_panda/Resources/controlServer/restapi/: restapi.go  (+1 more)
Enterprise/mustang_panda/Resources/email_generation/: README.md  send_email.py
Enterprise/mustang_panda/Resources/payloads/: Calendar Invitation Kali.msc  Calendar_Invitation.msc  README.md  collection.vbs  del_WinGupSvc.bat  files.txt  p4_spearphishing.html  plugx_spearphishing.html  startcode.bat  toneshell_spearphishing.docx  toneshell_spearphishing.html
Enterprise/mustang_panda/Resources/plugx/: .gitignore  BuildMSI.md  CMakeLists.txt  CMakePresets.json  README.md
Enterprise/mustang_panda/Resources/plugx/PlugxMSI/: CMakeLists.txt  PlugxMSI.sln  PlugxMSI.vdproj  README.md  embed_smuggled_payload.ps1  msi_smuggler.html.in
Enterprise/mustang_panda/Resources/plugx/src/: CMakeLists.txt  README.md
Enterprise/mustang_panda/Resources/plugx/src/common/: README.md  base64.cpp  base64.hpp  logger.cpp  logger.hpp  logger_test.cpp  rc4.cpp  util.cpp  util.hpp
Enterprise/mustang_panda/Resources/plugx/src/loader/: CMakeLists.txt  RC4.nim  README.md  libcurl.nim  logger.nim
Enterprise/mustang_panda/Resources/plugx/src/shellcode/: CMakeLists.txt  README.md  comms.cpp  comms.hpp  entry.cpp  shellcode.hpp  shellcode_util.cpp  shellcode_util.hpp
Enterprise/mustang_panda/Resources/plugx/src/shellcode/external_helpers/: README.md  rc4_encrypt_file.py
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/: README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/C2DownloadFile/: C2DownloadFile.cpp  C2DownloadFile.hpp  CMakeLists.txt  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/CreateRegistryRunKey/: CMakeLists.txt  CreateRegistryRunKey.cpp  CreateRegistryRunKey.hpp  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/DecoyPDF/: CMakeLists.txt  DecoyPDF.cpp  DecoyPDF.hpp  README.md  create_pdf.py  embedded_pdf.cpp  embedded_pdf.hpp
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/Echo_C2/: CMakeLists.txt  Echo_C2.cpp  Echo_C2.hpp  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/ExecuteCommand/: CMakeLists.txt  ExecuteCommand.cpp  ExecuteCommand.hpp  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/Keylogger/: CMakeLists.txt  Keylogger.cpp  Keylogger.hpp  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/modules/MessageBoxA/: CMakeLists.txt  MessageBoxA.cpp  MessageBoxA.hpp  README.md
Enterprise/mustang_panda/Resources/plugx/src/shellcode/registry/: README.md  module_list.hpp  module_registry.cpp  module_registry.hpp
Enterprise/mustang_panda/Resources/plugx/src/test5/: CMakeLists.txt  README.md
Enterprise/mustang_panda/Resources/plugx/src/test5/MSI/: CMakeLists.txt  MSI.sln  MSI.vdproj  README.md
Enterprise/mustang_panda/Resources/plugx/src/test5/rcdll/: CMakeLists.txt  README.md  rcdll.cpp  rcdll.def  rcdll_util.cpp  rcdll_util.hpp  rcdll_util_test.cpp  stub.cpp  stub.hpp
Enterprise/mustang_panda/Resources/plugx/tests/: README.md
Enterprise/mustang_panda/Resources/plugx/tests/gtest/: CMakeLists.txt  README.md
Enterprise/mustang_panda/Resources/setup/: README.md
Enterprise/mustang_panda/Resources/sharpnbtscan/: README.md
Enterprise/scattered_spider/: README.md
Enterprise/scattered_spider/CTI_Emulation_Resources/: README.md  Scattered_Spider_Scenario_Diagrams.md  Scattered_Spider_Scenario_Overview.md
Enterprise/scattered_spider/Emulation_Plan/: Cleanup_Scattered_Spider_Guide.md  Protections_Test_1_Scenario.md  Protections_Test_2_Scenario.md  Protections_Test_3_Scenario.md  Protections_Test_6_Scenario.md  Protections_Test_7_Scenario.md  README.md  Scattered_Spider_Alternative_Steps.md  Scattered_Spider_Scenario.md
Enterprise/scattered_spider/Resources/: README.md
Enterprise/scattered_spider/Resources/AITM/: .gitignore  README.md  go.mod
Enterprise/scattered_spider/Resources/Images/: README.md
Enterprise/scattered_spider/Resources/assets/: README.md
Enterprise/scattered_spider/Resources/aws_consoler/: README.md
Enterprise/scattered_spider/Resources/controlServer/: README.md  go.mod  go.sum
Enterprise/scattered_spider/Resources/email_generation/: README.md  det_spearphishing.html  send_email.py
Enterprise/scattered_spider/Resources/jecretz/: README.md  jecretz.py  requirements.txt
Enterprise/scattered_spider/Resources/payloads/: README.md  WindowsClientInstall.ps1
Enterprise/scattered_spider/Resources/rmmagent/: README.md
Enterprise/scattered_spider/Resources/setup/: GettingStarted.md  JecretzSetup.md  README.md  Traffic-Redirection.md  TruffleHogSetup.md  ansible-docs-config.yml
Enterprise/scattered_spider/Resources/snaffler/: README.md
Enterprise/scattered_spider/Resources/trufflehog/: README.md
(+689 files in other folders)
